-------------------------------------
    6.0-1   2019-04-28
-------------------------------------
Add discard (TRIM) support for VDI ($enableAdvancedConfig required)
Upgrade to Virtualbox 6.0:
Add NVMe storage controllers support
Add Nested VT-x/AMD-V control (System-Processor tab)
Add Graphics controller select (Display-Screen tab)

Known issues: no translation for new options
-------------------------------------
    5.2-1   2018-11-09
-------------------------------------
Various snapshot fixes and improvements - @Adam5Wu
Add a configuration variable to set the VRDE address - @rosorio
New icons to match Desktop Application - @der-eismann
Fix Import/Export - @tom077
Russian translation fixes - @SvetlanaTkachenko
Viewport and URL fixes - @krzysztof113
Convert to unix file format to reduce size


-------------------------------------
    5.2-0   2018-02-16
-------------------------------------
Long overdue post 5.0 support (5.2 at this stage)
PHP 7.1 support thanks to @mikedld
New Czech localization thanks to @p-bo
MySQL autho module thanks to @tioigor96
Various bugfixes thanks to @tschoening and @ashway83
Huge support effort from @tom077!
Thanks to everyone who's helped bring this project back up to speed!

-------------------------------------
    5.0-5   2016-01-08
-------------------------------------
PHP 7 support

-------------------------------------
    5.0-4   2015-12-07
-------------------------------------
Fixed bug in file / folder browser when $browserRestrictFolders is
set.
https://sourceforge.net/p/phpvirtualbox/bugs/50/

Fixed bug in host network interface sorting.
https://sourceforge.net/p/phpvirtualbox/bugs/36/

Fixed bug where phpVirtualBox installations on the same server may
share session cookies in certain PHP configurations.

Fixed bug where noPreview=true; was ignored in settings.
https://sourceforge.net/p/phpvirtualbox/bugs/38/

-------------------------------------
    5.0-3   2015-09-09
-------------------------------------