@@ -6,8 +6,6 @@ with support from various contributors (see https://github.com/phpvirtualbox/php
 
 Originally Copyright (C) 2015 Ian Moore (imoore76 at yahoo dot com)
 
-VirtualBox 6.0.x adaptation by Pasha1st
-
 FREE, WITHOUT WARRANTY:
 
 All files of this program (phpVirtualBox) are distributed under the
