@@ -1,11 +1,0 @@
-# phpVirtualBox adaptation for VirtualBox 6.0.x by Pasha1st
-
-This adaptaion supports major features of VirtualBox 6 such as ``graphics controllers`` and ``NVMe storage controllers``
-
-Fork address: <https://github.com/pasha1st/phpvirtualbox-6/>
-
-If you like this work you are welcome to send me any donation:
-* Bitcoin: ``1BsCFRCkwdcGmGDm1F8qqkm4Dcai5XtEaM``
-* WebMoney: ``R426393569840`` ``Z292591296225``
-* YandexMoney: ``pasha1st@yandex.ru``
-* PayPal: <https://paypal.me/pasha1st>
