@@ -10,16 +10,6 @@ I affiliated with them in any way. If you find this program useful, I ask that y
 <p align=center>
 <a href='https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=UB2BVHBDUJ2D2' target=_blank><img src='images/donate.gif' style='border: 0px;'></a>
 </p>
-<br>
-<p style='text-align: center'>
-<b>VirtualBox 6.0.* adaptation by Pasha1st</b>
-</p>
-<p style='text-align: center'><a target='_blank' href='https://github.com/pasha1st/phpvirtualbox-6/'>https://github.com/pasha1st/phpvirtualbox-6</a></p>
-<p style='text-align: center'>
-<a href='https://www.paypal.me/pasha1st' target=_blank><img src='images/donate.gif' style='border: 0px;'></a><br>
-WebMoney WMZ: Z292591296225 <br>
-BitCoin: 1BsCFRCkwdcGmGDm1F8qqkm4Dcai5XtEaM
-</p>
 <div style='margin-top: 10px; border-top: 1px solid #000;' id='vboxAboutVbox'><p>VirtualBox</p>
 	<script type='text/javascript'>
 		$('#vboxAboutHeader').html('phpVirtualBox '+$('#vboxPane').data('vboxConfig').phpvboxver+' -/- VirtualBox '+$('#vboxPane').data('vboxConfig').phpvboxver.substring(0,$('#vboxPane').data('vboxConfig').phpvboxver.indexOf('-'))+'.x compatible');
